<resources>
    <string name="app_name">goodplanet</string>
    <string name="text_username">Username</string>
    <string name="hint_username">Your Email</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="text">Login</string>
    <string name="txt_action_exit">Salir</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_action_logout">Logout</string>
    <string name="textview">Register</string>
    <string name="txt_name">Name</string>
    <string name="txt_lastname">Lastname</string>
    <string name="txt_Cellnumber">Cellphone</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_lastname">Your Lastname</string>
    <string name="hint_Cellnumber">Your Cellphone Number</string>
    <string name="txt_Register">Register</string>
    <string name="txt_Swicht">On</string>
    <string name="txt_Return">Return</string>
    <string name="test_Seller">Seller</string>
    <string name="test_search">Search</string>
    <string name="test_Category">Category</string>
    <string name="txt_Task_1">Plastic</string>
    <string name="txt_Task_2">Paper</string>
    <string name="txt_Task_3">Glass </string>
    <string name="txt_Task_4">Metal </string>
    <string name="submit">Send </string>
    <string name="txt_PVC"> PVC = It is rigid and hard, it is used to pack food and non-food items. </string>
    <string name="txt_PP"> PP = Kitchen utensils, plastic microwave plates, drinking straws, disposable cutlery, etc. </string>
    <string name="txt_PS"> PS (Polystyrene). Electronic material and packaging foam, black material. </string>
    <string name="txt_PET"> PET = Transparent plastic. </string>
    <string name="txt_HDPE"> HDPE = Dairy, juice, shampoo, perfume, detergent, etc. containers. </string>
    <string name="txt_LDPE"> LDPE = Food and garbage bags, squeeze bottles or flexible lids. </string>
    <string name="txt_action_phone">llamar</string>
    <string name="google">Google</string>
    <string name="prefs_file">com.example.goodplanet.REFERENCE_FILE_KEY</string>
    <string name="txt_photo">TAKE PHOTO</string>
    <string name="title_activity_flo">FloActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="IB" >Información</string>
    <string name="hola">Hello, GOODPLANET wants to congratulate you for your contribution to caring for the planet </string>
</resources>