<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/txt_action_search"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/salir"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/txt_action_logout"
        app:showAsAction="never">

    </item>

    <item

        android:id="@+id/action_phone"
        android:icon="@drawable/ic_phone_in_talk_24"
        android:title="@string/txt_action_phone"
        android:onClick="onPhone"
        app:showAsAction="always">
    </item>
</menu>