<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_chettan"
        android:text="FOTOGRAFIA DE PERFIL"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/customborder"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:src="@drawable/profile"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_take_Photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="36dp"
                android:fontFamily="@font/baloo_chettan"
                android:padding="10dp"
                android:text="@string/txt_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/baloo_chettan"
                android:text="Captura tu mejor perfil"
                android:textColor="@color/teal_700"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="Correo Electronico"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:fontFamily="@font/baloo_chettan"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp">

        </EditText>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/text_password"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:fontFamily="@font/baloo_chettan"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:passwordToggleEnabled="true">


        </EditText>


        <Switch
            android:id="@+id/stTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo_chettan"
            android:minHeight="48dp"
            android:text="Autorizo el traramiento de mis datos, segun la ley vigente"
            android:textColor="@color/teal_700"
            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:fontFamily="@font/baloo_chettan"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:elevation="36dp"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/txt_Register"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/btn_Acceder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:elevation="36dp"
                android:fontFamily="@font/baloo_chettan"
                android:text="ACCEDER"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@mipmap/ic_instagram3_round"
                android:padding="16dp"
                android:text="@string/google"
                android:textAlignment="textStart"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btn_Return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_baseline_keyboard_return_24"
                android:elevation="36dp"
                android:fontFamily="@font/baloo_chettan"
                android:minHeight="48dp"
                android:onClick="onReturn"
                android:text="@string/txt_Return"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>