<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InicioActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#009688"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/primary_text_dark" />

        <LinearLayout
            android:id="@+id/fragRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imgViewluna"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/gif2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customborder"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_chettan"
                    android:text="@string/text_username"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:fontFamily="@font/baloo_chettan"
                    android:hint="@string/hint_username"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                    android:autofillHints="">

                </EditText>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_chettan"
                    android:text="@string/text_password"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_chettan"
                    android:hint="@string/hint_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="15"
                        android:fontFamily="@font/baloo_chettan"
                        android:inputType="textPassword"
                        android:textColor="@color/teal_700"
                        android:textColorHint="#757575"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="6dp"
                    android:fontFamily="@font/baloo_chettan"
                    android:text="@string/text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/btnViewBackPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:text="¿Olvidaste tu contraseña?"
                    android:textColor="@color/teal_700"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/btn_irRegister"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:elevation="36dp"
                    android:fontFamily="@font/baloo_chettan"
                    android:onClick="onRegister"
                    android:text="@string/textview"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:fab_addButtonColorNormal="@color/teal_700"
            app:fab_addButtonColorPressed="@color/black"
            app:fab_addButtonSize="mini"
            app:fab_expandDirection="left"
            app:fab_title="menu">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="WhatsAppIntent"
                android:src="@mipmap/ic_whatsapp1"
                app:fab_colorPressed="@color/black"
                app:fab_size="mini"
                app:fab_title="WhatsApp" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="facebookIntent"
                android:src="@mipmap/ic_facebook2"
                app:fab_size="mini" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="InstagramIntent"
                android:src="@mipmap/ic_instagram3"
                app:fab_size="mini" />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>